# pitchperfect

./: CNAME  README.md  index.html  pyproject.toml
.github/workflows/: release.yml  test.yml
pitchperfect/: __init__.py  value_net.py
pitchperfect/data/: presets.json  refs.json  weights.json
tests/: dom_smoke.mjs  run_js_refs.mjs  test_parity.py
tools/: build_standalone.py  diagnose_models.py  export_from_value.py  study.py
web/: about.html  demo.html  index.html  papers.html  standalone.html
web/css/: style.css
web/data/: presets.json  refs.json  weights.json
web/js/: demo.js  model.js  probes.js
