[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "pitchperfect"
version = "0.1.0"
description = "An interactive, browser-ready port of a trained soccer value function, with a dependency-light numpy reference implementation."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Peter Cotton", email = "peter.cotton@microprediction.com" }]
keywords = ["soccer", "football", "value-function", "deep-sets", "sports-analytics"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = ["numpy>=1.21"]

[project.optional-dependencies]
test = ["pytest>=7"]

[project.urls]
Homepage = "https://github.com/microprediction/pitchperfect"
Demo = "https://microprediction.github.io/pitchperfect/"

[tool.setuptools]
packages = ["pitchperfect"]

[tool.setuptools.package-data]
pitchperfect = ["data/*.json"]
